practice: custom hooks - useFetch for Joke.js and Stories.js

--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,11 @@ button {
   object-fit: cover;
 }
 
+.loader {
+  color: green;
+  font-size: large;
+}
+
 .multiform {
   display: flex;
   flex-direction: column;
